compiler/tests/should-pass/code-generation/aby/ABY1.via
host alice : {A & B<-}
host bob   : {B & A<-}

fun main() {
    let $tmp@Local(host = alice) = input int from alice;
    let $tmp_1@Local(host = bob) = input int from bob;
    let $tmp_3@YaoABY(client = bob, server = alice) = ($tmp - $tmp_1);
    let $tmp_4@Local(host = alice) = declassify $tmp_3 to {(A ⊓ B)};
    val a_wins: int{(A ⊓ B)}@Local(host = alice) = $tmp_4;
    let $tmp_5@Local(host = alice) = a_wins;
    output $tmp_5 to alice;
    let $tmp_6@Local(host = alice) = a_wins;
    output $tmp_6 to bob;
}
