compiler/tests/should-fail/NoApplicableProtocolVariable.via
/* NoSelectionSolutionError */

host alice : {A}

fun main() {
    val tooIntegral: int{A ∧ B<-} = 42;
}
